--- a/style.css
+++ b/style.css
@@ -1,1 +1,80 @@
 
+
+body {
+    display: flex;
+    flex-flow: column;
+    margin: 0;
+    border: 0;
+    padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.header-container {
+    background-color: #1F2937;
+    color: white;
+    display: flex;
+    flex-flow: column;
+    margin: 0;
+    border: 0;
+    padding: 0;
+}
+.header {
+    display: flex;
+}
+.logo {
+    flex: 1;
+    margin-left: 20px;
+}
+
+ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    margin-right: 20px;
+}
+.title {
+    font-size: 48px;
+}
+.title-subtext {
+    margin-bottom: 20px;
+}
+.cover {
+    display: flex;
+    justify-content: center;
+}
+.cover-right {
+    flex: 1;
+    margin: 50px;
+}
+.cover-photo {
+    width: 350px;
+    
+    border: 1px solid grey;
+    border-radius: 4%
+}
+.cover-left {
+    height: 200px;
+    margin: 50px;
+}
+.info-content {
+    display: flex;
+    justify-content: center;
+}
+.img-subtext {
+    text-align: center;
+}
+.block {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    flex: 1;
+}
+.information-container {
+    background-color: white;
+    color: black;
+}
+
+.berry-img {
+    border: 4px solid lightblue;
+    width: 200px;
+    border-radius: 4%
+}
