--- a/style.css
+++ b/style.css
@@ -8,73 +8,233 @@ body {
     padding: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+/* top section begin */
+
 .header-container {
     background-color: #1F2937;
-    color: white;
     display: flex;
     flex-flow: column;
-    margin: 0;
-    border: 0;
-    padding: 0;
-}
-.header {
-    display: flex;
-}
-.logo {
-    flex: 1;
-    margin-left: 20px;
-}
-
-ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    margin-right: 20px;
+    padding-bottom: 30px;
 }
 .title {
     font-size: 48px;
+    font-weight: extra-bold;
+    color: #F9FAF8;
+    
 }
-.title-subtext {
-    margin-bottom: 20px;
+.title-subtext,
+.header-links {
+    font-size: 18px;
+    color: #E5E7EB;
 }
+
+
+.header {
+    display: flex;
+    /* background-color: green; */
+    justify-content: center;
+    align-items: flex-end;
+    /* background-color: grey; */
+}
+.header-links {
+    display: flex;
+    justify-content: flex-end;
+    margin: 30px 0;
+    padding: 0;
+    gap: 15px;
+    list-style: none;
+    flex: 0 1 26%;
+    /* background-color: red; */
+    align-self: stretch;
+}
+
+
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    margin: 30px 0;
+    padding: 0;
+    flex: 0 1 26%;
+    /* background-color: blue; */
+    align-self: stretch;
+}
+
+
 .cover {
     display: flex;
     justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    /* background-color: antiquewhite; */
 }
-.cover-right {
-    flex: 1;
-    margin: 50px;
-}
-.cover-photo {
-    width: 350px;
-    
-    border: 1px solid grey;
-    border-radius: 4%
-}
+
 .cover-left {
-    height: 200px;
-    margin: 50px;
+    flex: 0 1 26%;
+    /* background-color: green; */
 }
-.info-content {
+
+.cover-right {
+    flex: 0 1 26%;
+    display: flex;
+    justify-content: flex-end;
+    /* background-color: red; */
+    /* height: 200px; */
+}
+.cover-right > img {
+    width: 400px;
+    border-radius: 2%;
+}
+
+
+
+
+.title-subtext {
+    padding-bottom: 15px;
+}
+
+.sign-up-button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border-radius: 4px;
+    border: none;
+    font-weight: bold;
+    padding: 5px 20px;
+    margin-top: 15px;
+}
+
+
+
+/* top section end */
+
+.info-header {
     display: flex;
     justify-content: center;
+    font-size: 36px;
+    font-weight: extra-bold;
 }
+
+.info-content {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: flex-start;
+    /* background-color: grey; */
+    flex: 0 0 52%;
+
+}
+
+
 .img-subtext {
     text-align: center;
+    /* background-color: green; */
+    width: 290px;
 }
 .block {
     display: flex;
-    flex-flow: column;
+    flex-flow: column wrap;
+    justify-content: center;
     align-items: center;
-    flex: 1;
+    padding: 0;
+    border: 0;
+    flex: 0 0 13%;
+    margin: 0 30px;
+    gap: 5px;
+    /* background-color: green; */
 }
 .information-container {
     background-color: white;
     color: black;
+    display: flex;
+    flex-flow: column;
+    padding: 50px 0;
 }
 
-.berry-img {
+.info-img {
     border: 4px solid lightblue;
-    width: 200px;
+    min-width: 100px;
+    max-width: 180px;
+    display: flex;
     border-radius: 4%
+}
+
+/* quote section */
+
+.quote-wrapper {
+    background-color: #E5E7EB;
+    margin-top: 50px;
+    padding: 100px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+}
+.quote {
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+    display: flex;
+    /* background-color: grey; */
+    width: 56%;
+}
+
+.quote-author {
+    width: 56%;
+    text-align: end;
+    /* background-color: green; */
+    font-weight: 700;
+    font-size: 24px;
+}
+
+/* call to action */
+.cta-container {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 75px 0;
+}
+.cta-wrapper {
+    background-color: #3882F6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45%;
+    height: 100px;
+    border-radius: 10px;
+    color: white;
+    padding: 25px 0;
+}
+.cta-text {
+    width: 50%;
+}
+
+.cta-title {
+    font-weight: 900;
+    font-size: 24px;
+    /* background-color: green; */
+}
+.cta-subtext {
+    font-size: 14px;
+    /* background-color: grey; */ 
+}
+.cta-signup {
+    border: 2px solid white;
+    background-color: #3882F6;
+    border-radius: 6px;
+    color: white;
+    font-weight: 600;
+    width: 80px;
+    height: 25px;
+}
+
+/* footer */
+.footer {
+    background-color: #1F2937;
+    padding: 40px 0;
+}
+
+.footer-text {
+    color: white;
+    text-align: center;
 }
